<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeFragment">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_header"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="28sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:contentDescription="@string/home"
                android:layout_width="250dp"
                android:layout_height="300dp"
                android:src="@drawable/home_fragment"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_text"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/starbucks"
                android:textSize="21sp"/>
        </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_text_second"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textColor="@color/starbucks"
                android:textSize="21sp"/>
            <ImageView
                android:contentDescription="@string/home_text_second"
                android:layout_width="400dp"
                android:layout_gravity="center"
                android:layout_height="300dp"
                android:src="@drawable/home_coffee"/>
    </LinearLayout>

</FrameLayout>